# maskme

./: .gitignore  .readthedocs.yaml  404.html  DESCRIPTION.txt  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yml  python-tests.yml
_build/html/: .buildinfo.bak  index.html  objects.inv  py-modindex.html  searchindex.js
_build/html/.doctrees/: environment.pickle  index.doctree
_build/html/.doctrees/explanation/: architecture.doctree  introduction.doctree
_build/html/.doctrees/how-to/: custom-strategy.doctree
_build/html/.doctrees/reference/: api.doctree  strategies.doctree
_build/html/_modules/: index.html
_build/html/explanation/: introduction.html
_build/html/reference/: strategies.html
_build/html/tutorials/: getting-started.html
css/: style.css
docs/: conf.py  index.html  index.md  maskme.html  mkdocs.yml  requirements.txt
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/css/: style.css
docs/explanation/: architecture.rst  introduction.rst
docs/how-to/: custom-strategy.rst
docs/source/: conf.py
docs/source/_static/: maskme-theme.css
docs/source/explanation/: architecture.rst  introduction.rst
docs/source/reference/: api.rst  strategies.rst
docs/source/tutorials/: getting-started.rst
docs/strategies/: reference.md
docs/tutorials/: getting-started.rst
engine/: index.html
examples/: full_report_demo.py
home/: index.html
js/: main.js
maskme/: core.py
maskme/strategies/: base.py  hashing.py
search/: search_index.json
source/: index.rst
source/_static/: custom.css
source/explanation/: introduction.rst
source/how-to/: custom-strategy.rst
source/tutorials/: getting-started.rst
src/maskme/: __init__.py  cli.py
src/maskme/analytics/: __init__.py  base.py  metrics.py  report.py  visual.py
src/maskme/core/: __init__.py  _sentinel.py  core.py  engine.py  navigation.py
src/maskme/io/: __init__.py  base.py  csv_handler.py  json_handler.py  jsonl_handler.py
src/maskme/ner/: __init__.py  base.py  language.py  pipeline.py
src/maskme/strategies/: __init__.py  base.py  drop.py  generalization.py  hashing.py  noise.py  noop.py  redaction.py
src/maskme/utility/: __init__.py  base.py  report.py
strategies/reference/: index.html
tests/integration/: test_core.py
tests/unit/: test_analytics.py  test_core_utils.py  test_csv_handler.py  test_drop.py  test_engine.py  test_generalization.py  test_hashing.py  test_json_handler.py  test_jsonl_handler.py  test_navigation.py  test_ner.py  test_noise.py  test_noop.py  test_redaction.py
(+49 files in other folders)
