[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maskme"

dynamic = ["version", "description"]
authors = [{name = "Lucien KIEMDE", email = "lucienkiemde4@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = [
    "anonymization", "pseudonymization", "data privacy", "data masking", 
    "PII", "GDPR", "HIPAA", "differential privacy", "data utility",
    "hashing", "redaction", "generalization", "noise",
    "data science", "machine learning", "structured data",
    "JSON", "CSV", "JSONL", "streaming",
    "privacy by design", "data protection",
    "Burkina Faso", "Africa"
]
classifiers = [
    "Development Status :: 3 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Database",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
]
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
full = ["ipywidgets>=8.0.0"]
jupyter = ["jupyter>=1.0.0", "ipywidgets>=8.0.0", "nbformat>=5.7.0"]
dev = [
    "pytest>=7.4.0", "pytest-cov>=4.1.0", "black>=23.0.0", 
    "isort>=5.12.0", "flake8>=6.0.0", "mypy>=1.4.0", "pre-commit>=3.3.0"
]
docs = ["sphinx>=7.0.0", "sphinx-rtd-theme>=1.3.0", "myst-parser>=2.0.0"]

[project.scripts]
maskme = "maskme.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "maskme.__init__.__version__"}
description = {file = "DESCRIPTION.txt"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "examples*", "docs*", "benchmarks*"]